data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1845.wast
;; 6. **Test 6: Stack Underflow on Forward Branch**    - **Description**: Use `br_if` to branch forward to a block without maintaining the required stack height before the branch.    - **Constraint Checked**: Ensure correct stack management and validation before executing the branch.    - **Relation to Type Mismatch**: Ensures stack integrity, preventing type mismatches after branching.

(assert_invalid
  (module
    (func
      (block (result i32)
        (i32.const 1)
        (br_if 0 (i32.const 1))
        (drop)
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)